:pencil2: ちょっと本文書き換え

--- a/index.html
+++ b/index.html
@@ -20,12 +20,20 @@
 	<link rel="shortcut icon" href="images/favicon.ico">
 	<link rel="apple-touch-icon" href="images/favicon.ico">
 	<link href="css/style.css" media="all" rel="stylesheet" type="text/css" />
+	<script data-ad-client="ca-pub-2970187839672696" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
   </head>
   <body>
     <h1>Hello, world!</h1>
     <p>
-      This is a simple static HTML file that will be served from Google App
-      Engine.
+      This is a simple static HTML file that will be served from Google App Engine.
     </p>
+	<p>
+	  このページは現在鋭意制作中です．
+	</p>
+	<h2>稼働中のサイト</h2>
+	<ul>
+		<li><a href="https://portfolio.loliver.net">ポートフォリオサイト</a></li>
+		<li><a href="https://blog.loliver.net">ぶろぐ</a></li>
+	</ul>
   </body>
 </html>
