--- a/index.html
+++ b/index.html
@@ -23,17 +23,30 @@
 	<script data-ad-client="ca-pub-2970187839672696" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
   </head>
   <body>
-    <h1>Hello, world!</h1>
-    <p>
-      This is a simple static HTML file that will be served from Google App Engine.
-    </p>
-	<p>
-	  このページは現在鋭意制作中です．
-	</p>
-	<h2>稼働中のサイト</h2>
-	<ul>
-		<li><a href="https://portfolio.loliver.net">ポートフォリオサイト</a></li>
-		<li><a href="https://blog.loliver.net">ぶろぐ</a></li>
-	</ul>
+    <div class="container">
+	  <section class="area">
+		<div class="center-parent"><div class="center-inner">
+		  <h1 class="hello">
+			Hello, World!
+		  </h1>
+		  <p class="summary">
+			This is a simple static HTML file that will be served from Google App Engine.
+		  </p>
+		  <p class="summary">
+			このページは現在鋭意制作中です．
+		  </p>
+		</div></div>
+	  </section>
+	  <section class="area">
+		<div class="center-parent"><div class="center-inner">
+		  <h2>稼働中のサイト</h2>
+		  <ul>
+			<li><a href="https://portfolio.loliver.net">ポートフォリオサイト</a></li>
+			<li><a href="https://blog.loliver.net">ぶろぐ</a></li>
+		  </ul>
+		</div></div>
+	  </section>
+	  <!--<section class="area">3</section>-->
+	</div>
   </body>
 </html>
