:sparkles: remake all

--- a/index.html
+++ b/index.html
@@ -1,52 +1,43 @@
 <!DOCTYPE html>
 <html>
   <head>
-	<meta charset="utf-8">
-	<title>Loliver's website</title>
-	<meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no">
-	<meta name="format-detection" content="telephone=no">
-	<meta name="description" content="ろりばのさいと">
-	<meta name="author" content="Loliver">
-	<link rel="canonical" href="https://loliver.net">
-	<meta property="og:site_name" content="Loliver's website">
-	<meta property="og:title" content="Loliver's website">
-	<meta property="og:description" content="ろりばのさいと">
-	<meta property="og:type" content="website">
-	<meta property="og:url" content="https://loliver.net">
-	<meta property="og:image" content="https://loliver.net/images/common/hsm_icon-Loliver-.png">
-	<meta name="twitter:card" content="summary">
-	<meta name="twitter:site" content="@Lolitta_river">
-	<meta name="twitter:image" content="https://loliver.net/images/common/hsm_icon-Loliver-.png">
-	<link rel="shortcut icon" href="images/favicon.ico">
-	<link rel="apple-touch-icon" href="images/favicon.ico">
-	<link href="css/style.css" media="all" rel="stylesheet" type="text/css" />
-	<script data-ad-client="ca-pub-2970187839672696" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
-  </head>
-  <body>
-    <div class="container">
-	  <section class="area">
-		<div class="center-parent"><div class="center-inner">
-		  <h1 class="hello">
-			Hello, World!
-		  </h1>
-		  <p class="summary">
-			This is a simple static HTML file that will be served from Google App Engine.
-		  </p>
-		  <p class="summary">
-			このページは現在鋭意制作中です．
-		  </p>
-		</div></div>
-	  </section>
-	  <section class="area">
-		<div class="center-parent"><div class="center-inner">
-		  <h2>稼働中のサイト</h2>
-		  <ul>
-			<li><a href="https://portfolio.loliver.net">ポートフォリオサイト</a></li>
-			<li><a href="https://blog.loliver.net">ぶろぐ</a></li>
-		  </ul>
-		</div></div>
-	  </section>
-	  <!--<section class="area">3</section>-->
-	</div>
-  </body>
-</html>
+  <meta charset="utf-8">
+  <title>Loliver's website</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1.0,user-scalable=no">
+  <meta name="format-detection" content="telephone=no">
+  <meta name="description" content="ろりばのさいと">
+  <meta name="author" content="Loliver">
+  <link rel="canonical" href="https://loliver.net">
+  <meta property="og:site_name" content="Loliver's website">
+  <meta property="og:title" content="Loliver's website">
+  <meta property="og:description" content="ろりばのさいと">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://loliver.net">
+  <meta property="og:image" content="https://loliver.net/images/common/hsm_icon-Loliver-.png">
+  <meta name="twitter:card" content="summary">
+  <meta name="twitter:site" content="@Lolitta_river">
+  <meta name="twitter:image" content="https://loliver.net/images/common/hsm_icon-Loliver-.png">
+  <link rel="shortcut icon" href="images/favicon.ico">
+  <link rel="apple-touch-icon" href="images/favicon.ico">
+  <link href="css/style.css" media="all" rel="stylesheet" type="text/css" />
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600;800&display=swap" rel="stylesheet">
+  <script type="text/javascript" src="script.js"></script>
+  <script data-ad-client="ca-pub-2970187839672696" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+</head>
+
+<body>
+  <header>
+    <nav>
+      <a href="https://portfolio.loliver.net">PORTFOLIO</a>
+      <a href="https://blog.loliver.net">BLOG</a>
+      <a id="trans-am">TRANS-AM</a>
+    </nav>
+  </header>
+  <section class="area">
+    <div class="spacer"></div>
+    <img class="avatar" src="images/common/hsm_icon-Loliver-.png">
+    <h1>Furukawa Daichi</h1>
+    <h3 class="shake-hover">I am Gundam!</h3>
+    <div class="spacer"></div>
+  </section>
+</body></html>
