:art: レスポンシブ対応してなかった！w

--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
   <link rel="apple-touch-icon" href="images/favicon.ico">
   <link href="css/style.css" media="all" rel="stylesheet" type="text/css" />
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600;800&display=swap" rel="stylesheet">
-  <script type="text/javascript" src="script.js"></script>
   <script data-ad-client="ca-pub-2970187839672696" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
 </head>
 
@@ -40,4 +39,5 @@
     <h3 class="shake-hover">I am Gundam!</h3>
     <div class="spacer"></div>
   </section>
+  <script src="js/script.js"></script>
 </body></html>
