--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <link rel="apple-touch-icon" href="images/favicon.ico">
   <link href="css/style.css" media="all" rel="stylesheet" type="text/css" />
   <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600;800&display=swap" rel="stylesheet">
-  <script data-ad-client="ca-pub-2970187839672696" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;400&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -38,6 +38,35 @@
     <h1>Furukawa Daichi</h1>
     <h3 class="shake-hover">I am Gundam!</h3>
     <div class="spacer"></div>
+    <a href="#about" class="scroll"><span></span></a>
   </section>
+  <div id="about" class="title">ABOUT ME</div>
+  <div class="card">
+    <div class="table">
+      <h4>所属</h4>
+      <p>熊本高等専門学校<br>人間情報システム工学科</p>
+      <h4>部活</h4>
+      <p>放送 / 電算</p>
+      <h4>資格</h4>
+      <p>基本情報技術者試験<br>G検定2020#1<br>アルゴリズム実技検定（エントリー）</p>
+      <h4>技術</h4>
+      <p>C/C++ / Python / HTML/CSS / Live2D / TeX / Adobe Illustrator</p>
+      <h4>好きなアニメ</h4>
+      <p>
+        アイカツ！ / スター☆トゥインクルプリキュア / Free! / プラスティック・メモリーズ / 
+        ガンダム00 / ヒカルの碁 / ヨスガノソラ
+      </p>
+      <h4>好きなラノベ</h4>
+      <p>デート・ア・ライブ / アブソリュート・デュオ / バカテス / 
+        ニャル子さん / 機巧少女は傷つかない / 庶民サンプル
+      </p>
+      <h4>好きな漫画</h4>
+      <p>月刊少女野崎くん / 神のみぞ知るセカイ / ラストゲーム</p>
+      <h4>好きなゲーム</h4>
+      <p>金色ラブリッチェ / 彼女のセイイキ / サノバウィッチ / 9-nine- / Summer Pockets / プライマルハーツ / 花咲ワークスプリング！</p>
+      <h4></h4>
+      <p></p>
+    </div>
+  </div>
   <script src="js/script.js"></script>
 </body></html>
