--- a/index.html
+++ b/index.html
@@ -43,27 +43,27 @@
   <div id="about" class="title">ABOUT ME</div>
   <div class="card">
     <div class="table">
-      <h4>所属</h4>
+      <h4>出身</h4>
       <p>熊本高等専門学校<br>人間情報システム工学科</p>
-      <h4>部活</h4>
+      <h4>入ってた部活</h4>
       <p>放送 / 電算</p>
       <h4>資格</h4>
-      <p>基本情報技術者試験<br>G検定2020#1<br>アルゴリズム実技検定（エントリー）</p>
+      <p>基本情報技術者試験<br>応用情報技術者試験<br>G検定2020#1<br>アルゴリズム実技検定（エントリー）<br>色彩検定UC級</p>
       <h4>技術</h4>
-      <p>C/C++ / Python / HTML/CSS / Live2D / TeX / Adobe Illustrator</p>
+      <p>C / C++ / Python / Java / TypeScript / Julia / R / CSS / Live2D / LaTeX / Adobe Illustrator</p>
       <h4>好きなアニメ</h4>
       <p>
         アイカツ！ / スター☆トゥインクルプリキュア / Free! / プラスティック・メモリーズ / 
         ガンダム00 / ヒカルの碁 / ヨスガノソラ
       </p>
       <h4>好きなラノベ</h4>
-      <p>デート・ア・ライブ / アブソリュート・デュオ / バカテス / 
+      <p>お隣の天使様 / デート・ア・ライブ / アブソリュート・デュオ / バカテス / 
         ニャル子さん / 機巧少女は傷つかない / 庶民サンプル
       </p>
       <h4>好きな漫画</h4>
-      <p>月刊少女野崎くん / 神のみぞ知るセカイ / ラストゲーム</p>
+      <p>月刊少女野崎くん / 寄宿学校のジュリエット / さっちゃん、僕は。 / ラストゲーム / 神のみぞ知るセカイ / しゅごキャラ！</p>
       <h4>好きなゲーム</h4>
-      <p>金色ラブリッチェ / 彼女のセイイキ / サノバウィッチ / 9-nine- / Summer Pockets / プライマルハーツ / 花咲ワークスプリング！</p>
+      <p>ゼノブレイド2 / ルーンファクトリーシリーズ / WHITE ALBUM2 / 景の海のアペイリア / Summer Pockets / はつゆきさくら</p>
       <h4></h4>
       <p></p>
     </div>
