プロフィール更新

--- a/index.html
+++ b/index.html
@@ -48,20 +48,19 @@
       <h4>入ってた部活</h4>
       <p>放送 / 電算</p>
       <h4>資格</h4>
-      <p>基本情報技術者試験<br>応用情報技術者試験<br>G検定2020#1<br>アルゴリズム実技検定（エントリー）<br>色彩検定UC級</p>
+      <p>情報処理安全確保支援士試験<br>応用情報技術者試験<br>基本情報技術者試験<br>G検定2020#1<br>アルゴリズム実技検定（エントリー）<br>色彩検定UC級<br>ビジネス実務法務検定3級</p>
       <h4>技術</h4>
-      <p>C / C++ / Python / Java / TypeScript / Julia / R / CSS / Live2D / LaTeX / Adobe Illustrator</p>
+      <p>TypeScript / Julia / Python / R / AWS / LaTeX / Live2D / Adobe Illustrator</p>
       <h4>好きなアニメ</h4>
       <p>
-        アイカツ！ / スター☆トゥインクルプリキュア / Free! / プラスティック・メモリーズ / 
+        アイカツ！ / プリキュア / Free! / プラメモ / 
         ガンダム00 / ヒカルの碁 / ヨスガノソラ
       </p>
       <h4>好きなラノベ</h4>
-      <p>お隣の天使様 / デート・ア・ライブ / アブソリュート・デュオ / バカテス / 
-        ニャル子さん / 機巧少女は傷つかない / 庶民サンプル
+      <p>バカテス / デート・ア・ライブ / アブソリュート・デュオ / 義妹生活 / お隣の天使様
       </p>
       <h4>好きな漫画</h4>
-      <p>月刊少女野崎くん / 寄宿学校のジュリエット / さっちゃん、僕は。 / ラストゲーム / 神のみぞ知るセカイ / しゅごキャラ！</p>
+      <p>月刊少女野崎くん / 寄宿学校のジュリエット / 未来日記 / さっちゃん、僕は。 / ラストゲーム / 神のみぞ知るセカイ / しゅごキャラ！</p>
       <h4>好きなゲーム</h4>
       <p>ゼノブレイド2 / ルーンファクトリーシリーズ / WHITE ALBUM2 / 景の海のアペイリア / Summer Pockets / はつゆきさくら</p>
       <h4></h4>
